name change (cause last was wrong)

--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-projectOrganizer.py
+projectScheduler.py
 projects.db
 tkinter_test.py
 azure.tcl
